--- a/app/src/main/res/layout/content_place_detail.xml
+++ b/app/src/main/res/layout/content_place_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,29 +8,58 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/fragment_place_detail">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.uncopt.android.widget.text.justify.JustifiedTextView
-            android:id="@+id/tvDescriptionDetail"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"/>
+            android:orientation="vertical">
+
+            <com.uncopt.android.widget.text.justify.JustifiedTextView
+                android:id="@+id/tvDescriptionDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_comments"
+                android:textColor="@color/colorAccent"
+                android:textSize="16sp" />
 
 
-        <fragment android:id="@+id/map"
-                  android:name="com.google.android.gms.maps.SupportMapFragment"
-                  xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:tools="http://schemas.android.com/tools"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"/>
+            <EditText
+                android:id="@+id/etCommentPlace"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="@string/hint_comment"
+                android:inputType="text"
+                android:maxLength="50" />
 
+            <Button
+                android:id="@+id/btnSendComment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:text="@string/text_send_comment"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+        </LinearLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvComments"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/text_margin"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="@dimen/text_margin" />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
