-Gallery section added -Comments section fix

--- a/app/src/main/res/layout/content_place_detail.xml
+++ b/app/src/main/res/layout/content_place_detail.xml
@@ -19,16 +19,27 @@
             android:layout_margin="@dimen/text_margin"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvPlaceName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textColor="@color/colorAccent" />
+
             <com.uncopt.android.widget.text.justify.JustifiedTextView
                 android:id="@+id/tvDescriptionDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:ellipsize="middle"
+                android:maxLines="5"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="@string/text_comments"
                 android:textColor="@color/colorAccent"
                 android:textSize="16sp" />
@@ -56,10 +67,11 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvComments"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="@dimen/text_margin" />
+            android:layout_marginEnd="@dimen/text_margin"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
